add methods for getting started students and curators and getting students in curators group and fixed start event method
